Bug 337932 - Plasma-desktop build failure with Qt 5.4 (QExplicitlySharedDataPointer)
Summary: Plasma-desktop build failure with Qt 5.4 (QExplicitlySharedDataPointer)
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Menu (Kicker) widget (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Eike Hein
URL: https://qt.gitorious.org/qt/qtbase/co...
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-31 05:44 UTC by Hrvoje Senjan
Modified: 2014-08-06 06:36 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Hrvoje Senjan 2014-07-31 05:44:05 UTC
Error goes:

[  132s] In file included from /usr/include/qt5/QtCore/qsharedpointer.h:47:0,
[  132s]                  from /usr/include/qt5/QtGui/qpixmap.h:49,
[  132s]                  from /usr/include/qt5/QtGui/qicon.h:48,
[  132s]                  from /usr/include/qt5/QtGui/QIcon:1,
[  132s]                  from /home/abuild/rpmbuild/BUILD/plasma-desktop-5.0.40git~1406569768~45c3b70/applets/kicker/plugin/abstractentry.h:26,
[  132s]                  from /home/abuild/rpmbuild/BUILD/plasma-desktop-5.0.40git~1406569768~45c3b70/applets/kicker/plugin/appsmodel.h:24,
[  132s]                  from /home/abuild/rpmbuild/BUILD/plasma-desktop-5.0.40git~1406569768~45c3b70/applets/kicker/plugin/appsmodel.cpp:21:
[  132s] /usr/include/qt5/QtCore/qshareddata.h: In instantiation of 'QExplicitlySharedDataPointer<T>::QExplicitlySharedDataPointer(const QExplicitlySharedDataPointer<X>&) [with X = KSycocaEntry; T = KServiceGroup]':
[  132s] /home/abuild/rpmbuild/BUILD/plasma-desktop-5.0.40git~1406569768~45c3b70/applets/kicker/plugin/appsmodel.cpp:255:81:   required from here
[  132s] /usr/include/qt5/QtCore/qshareddata.h:174:21: error: invalid conversion from 'KSycocaEntry*' to 'KServiceGroup*' [-fpermissive]
[  132s]          : d(o.data())
[  132s]                      ^
[  132s] /usr/include/qt5/QtCore/qshareddata.h: In instantiation of 'QExplicitlySharedDataPointer<T>::QExplicitlySharedDataPointer(const QExplicitlySharedDataPointer<X>&) [with X = KSycocaEntry; T = KService]':
[  132s] /home/abuild/rpmbuild/BUILD/plasma-desktop-5.0.40git~1406569768~45c3b70/applets/kicker/plugin/appsmodel.cpp:298:71:   required from here
[  132s] /usr/include/qt5/QtCore/qshareddata.h:174:21: error: invalid conversion from 'KSycocaEntry*' to 'KService*' [-fpermissive]
Comment 1 Kevin Funk 2014-08-06 06:36:32 UTC
Git commit ee4927f4f6ba794afaa256ac2e66e46659d6f4e8 by Kevin Funk.
Committed on 06/08/2014 at 06:30.
Pushed by kfunk into branch 'master'.

Make compile with Qt 5.4

M  +5    -4    applets/kicker/plugin/appsmodel.cpp

http://commits.kde.org/plasma-desktop/ee4927f4f6ba794afaa256ac2e66e46659d6f4e8